// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Plots-StepLineChart 兼容旧版StepLineChart-point 1`] = `
Object {
  "animation": true,
  "appendPadding": Array [
    10,
    5,
    10,
    10,
  ],
  "autoFit": undefined,
  "data": Array [
    Object {
      "value": 3,
      "year": "1991",
    },
    Object {
      "value": 4,
      "year": "1992",
    },
    Object {
      "value": 3.5,
      "year": "1993",
    },
    Object {
      "value": 5,
      "year": "1994",
    },
    Object {
      "value": 4.9,
      "year": "1995",
    },
    Object {
      "value": 6,
      "year": "1996",
    },
    Object {
      "value": 7,
      "year": "1997",
    },
    Object {
      "value": 9,
      "year": "1998",
    },
    Object {
      "value": 13,
      "year": "1999",
    },
  ],
  "isStack": false,
  "legend": Object {
    "position": "top-left",
  },
  "point": Object {},
  "renderer": "canvas",
  "stepType": "hv",
  "tooltip": Object {
    "crosshairs": Object {
      "type": "x",
    },
    "shared": true,
    "showCrosshairs": true,
    "showMarkers": true,
  },
  "xAxis": Object {
    "label": Object {
      "autoHide": Object {
        "cfg": Object {
          "minGap": 6,
        },
        "type": "equidistance",
      },
      "autoRotate": false,
    },
    "nice": true,
  },
  "xField": "year",
  "yAxis": Object {
    "label": Object {
      "autoHide": true,
      "autoRotate": false,
    },
    "nice": true,
  },
  "yField": "value",
}
`;

exports[`Plots-StepLineChart 兼容旧版shape-shapeType 1`] = `
Object {
  "animation": true,
  "appendPadding": Array [
    10,
    5,
    10,
    10,
  ],
  "autoFit": undefined,
  "data": Array [
    Object {
      "value": 3,
      "year": "1991",
    },
    Object {
      "value": 4,
      "year": "1992",
    },
    Object {
      "value": 3.5,
      "year": "1993",
    },
    Object {
      "value": 5,
      "year": "1994",
    },
    Object {
      "value": 4.9,
      "year": "1995",
    },
    Object {
      "value": 6,
      "year": "1996",
    },
    Object {
      "value": 7,
      "year": "1997",
    },
    Object {
      "value": 9,
      "year": "1998",
    },
    Object {
      "value": 13,
      "year": "1999",
    },
  ],
  "isStack": false,
  "legend": Object {
    "position": "top-left",
  },
  "renderer": "canvas",
  "step": "vhv",
  "stepType": "vhv",
  "tooltip": Object {
    "crosshairs": Object {
      "type": "x",
    },
    "shared": true,
    "showCrosshairs": true,
    "showMarkers": true,
  },
  "xAxis": Object {
    "label": Object {
      "autoHide": Object {
        "cfg": Object {
          "minGap": 6,
        },
        "type": "equidistance",
      },
      "autoRotate": false,
    },
    "nice": true,
  },
  "xField": "year",
  "yAxis": Object {
    "label": Object {
      "autoHide": true,
      "autoRotate": false,
    },
    "nice": true,
  },
  "yField": "value",
}
`;
